# SliceTracker

./: .gitignore  CMakeLists.txt  README.md  SliceTracker.py  SliceTrackerRegistration.py  SliceTrackerZFrameRegistration.py  ZFrameCalibration.cxx  ZFrameCalibration.xml  startSlicelet.sh  startSlicelet_Ubuntu.sh
Logo/: SliceTracker.ai  SliceTracker_original.ai
RegistrationModule/: .gitignore  CMakeLists.txt  RegistrationModule.py  qRegistrationModule.qrc
RegistrationModule/Resources/Testing/preopDir/: Targets.fcsv  t2-label.nrrd
RegistrationModule/Resources/Testing/testData_1/: PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.1.20050725.080748.15gc1i3.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.10.20050725.080748.1d8nea9.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.11.20050725.080748.1yxacfx.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.12.20050725.080748.rxwaz1.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.13.20050725.080748.b1eg5h.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.14.20050725.080748.1bhj5ti.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.15.20050725.080748.1oju68z.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.16.20050725.080748.1up544m.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.17.20050725.080748.1voye2m.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.18.20050725.080748.bmelec.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.19.20050725.080748.101sqte.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.2.20050725.080748.w4sy3r.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.20.20050725.080748.rqlyz6.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.21.20050725.080748.wzlptf.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.3.20050725.080748.1lfhqoy.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.4.20050725.080748.1qo8a7u.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.5.20050725.080748.umaa8c.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.6.20050725.080748.1maluco.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.7.20050725.080748.1h38lgv.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.8.20050725.080748.8t8pgg.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.1.9.20050725.080748.12qrf52.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.1.20050725.080748.bsxr6t.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.10.20050725.080748.1gpveem.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.11.20050725.080748.lzoglm.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.12.20050725.080748.1k8r2lx.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.13.20050725.080748.1cufziy.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.14.20050725.080748.58rj3a.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.15.20050725.080748.osz54o.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.16.20050725.080748.13cgnb2.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.17.20050725.080748.1spbpqq.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.18.20050725.080748.14xtbif.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.19.20050725.080748.1n1nlk8.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.2.20050725.080748.1e38e58.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.20.20050725.080748.185esgz.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.3.20050725.080748.1s2hh23.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.4.20050725.080748.1upmhb7.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.5.20050725.080748.1tsnvep.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.2.6.20050725.080748.p278a0.dcm  (+3 more)
RegistrationModule/Utils/: watch.py
Resources/: default.cfg
Resources/Testing/testData_4/: PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.13.20050725.080748.gxi1mo.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.14.20050725.080748.pbvw3j.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.17.20050725.080748.1kooyyf.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.18.20050725.080748.14ipwsx.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.2.20050725.080748.swz3ve.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.3.20050725.080748.v3khcy.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.5.20050725.080748.1acqq6o.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.7.20050725.080748.1y67e95.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.8.20050725.080748.nlfh3q.dcm  PCAMRGBX-00137.MR.AMM211_BD_MR_INTROP_GD_RD.15.9.20050725.080748.j2kok0.dcm
Resources/zframe/: ProstateTemplate.csv
SliceTracker/: CMakeLists.txt  SliceTracker.py  SliceTrackerRegistration.py  SliceTrackerZFrameRegistration.py  SurfaceCutToLabel.py  VolumeClipToLabel.py
SliceTracker/Resources/: default.cfg  version.json  version.json.in
SliceTracker/Resources/zframe/: ProstateTemplate.csv  zframe-config.csv
SliceTracker/SliceTrackerUtils/: RegistrationData.py  SliceTrackerTrainingStep.py  WindowLevelEffect.py  ZFrameRegistration.py  __init__.py  configuration.py  constants.py  data.py  events.py  exceptions.py  helpers.py  preopHandler.py  session.py  sessionData.py  watch.py
SliceTracker/SliceTrackerUtils/algorithms/: automaticProstateSegmentation.py  zFrameRegistration.py
SliceTracker/SliceTrackerUtils/steps/: base.py  evaluation.py  overview.py  segmentation.py  training.py  zFrameRegistration.py
SliceTracker/SliceTrackerUtils/steps/plugins/: case.py  charts.py  (+6 more)
SliceTrackerUtils/: Constants.py  RegistrationData.py  WindowLevelEffect.py  ZFrameRegistration.py  configuration.py  constants2.py  decorators.py  events.py  exceptions.py  helpers.py  mixins.py
Testing/: CMakeLists.txt  SliceTrackerTests.py
Utils/: helpers.py  mixins.py
ZFrame/: Calibration.cxx
ZFrameCalibration/: CMakeLists.txt  ZFrameCalibration.cxx
ZFrameCalibration/Data/: CoverTemplateMasked.nrrd  ZFrame.vtk
ZFrameCalibration/ZFrame/: Calibration.h
doc/: output_example.json  output_schema.json
puml/: RegistrationResults.puml  SliceTracker.puml  SliceTrackerPlugins.puml  SliceTrackerSession.puml  SliceTrackerSteps.puml  SlicerDevelopmentToolbox.puml  SlicerProstate.puml  components.puml  intraop_reception.puml
testdata/: Masked Volume.nrrd
(+73 files in other folders)
